Basic structure for paratext unit testing
https://github.com/bibledit/cloud/issues/308

--- a/Makefile.am
+++ b/Makefile.am
@@ -459,6 +459,7 @@ unittest_SOURCES = \
 	unittests/usfm.cpp \
 	unittests/verses.cpp \
 	unittests/pairs.cpp \
+	unittests/paratext.cpp \
 	unittests/hyphenate.cpp \
 	unittests/search.cpp \
 	unittests/json.cpp \
