--- a/Makefile.in
+++ b/Makefile.in
@@ -123,16 +123,17 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	filter/usfm.$(OBJEXT) filter/archive.$(OBJEXT) \
 	filter/text.$(OBJEXT) filter/passage.$(OBJEXT) \
 	filter/css.$(OBJEXT) filter/git.$(OBJEXT) \
-	filter/diff.$(OBJEXT) filter/shell.$(OBJEXT) \
-	filter/merge.$(OBJEXT) filter/date.$(OBJEXT) \
-	filter/memory.$(OBJEXT) filter/webview.$(OBJEXT) \
-	filter/mail.$(OBJEXT) flate/flate.$(OBJEXT) \
-	assets/view.$(OBJEXT) assets/page.$(OBJEXT) \
-	assets/header.$(OBJEXT) assets/external.$(OBJEXT) \
-	index/index.$(OBJEXT) index/listing.$(OBJEXT) \
-	config/globals.$(OBJEXT) menu/logic.$(OBJEXT) \
-	menu/index.$(OBJEXT) locale/translate.$(OBJEXT) \
-	locale/logic.$(OBJEXT) database/config/general.$(OBJEXT) \
+	filter/html.$(OBJEXT) filter/diff.$(OBJEXT) \
+	filter/shell.$(OBJEXT) filter/merge.$(OBJEXT) \
+	filter/date.$(OBJEXT) filter/memory.$(OBJEXT) \
+	filter/webview.$(OBJEXT) filter/mail.$(OBJEXT) \
+	flate/flate.$(OBJEXT) assets/view.$(OBJEXT) \
+	assets/page.$(OBJEXT) assets/header.$(OBJEXT) \
+	assets/external.$(OBJEXT) index/index.$(OBJEXT) \
+	index/listing.$(OBJEXT) config/globals.$(OBJEXT) \
+	menu/logic.$(OBJEXT) menu/index.$(OBJEXT) \
+	locale/translate.$(OBJEXT) locale/logic.$(OBJEXT) \
+	database/config/general.$(OBJEXT) \
 	database/config/bible.$(OBJEXT) database/config/user.$(OBJEXT) \
 	database/users.$(OBJEXT) database/logs.$(OBJEXT) \
 	database/sqlite.$(OBJEXT) database/styles.$(OBJEXT) \
@@ -487,44 +488,45 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	export/$(DEPDIR)/web.Po filter/$(DEPDIR)/archive.Po \
 	filter/$(DEPDIR)/css.Po filter/$(DEPDIR)/date.Po \
 	filter/$(DEPDIR)/diff.Po filter/$(DEPDIR)/git.Po \
-	filter/$(DEPDIR)/mail.Po filter/$(DEPDIR)/md5.Po \
-	filter/$(DEPDIR)/memory.Po filter/$(DEPDIR)/merge.Po \
-	filter/$(DEPDIR)/passage.Po filter/$(DEPDIR)/roles.Po \
-	filter/$(DEPDIR)/shell.Po filter/$(DEPDIR)/string.Po \
-	filter/$(DEPDIR)/text.Po filter/$(DEPDIR)/url.Po \
-	filter/$(DEPDIR)/usfm.Po filter/$(DEPDIR)/webview.Po \
-	flate/$(DEPDIR)/flate.Po fonts/$(DEPDIR)/logic.Po \
-	help/$(DEPDIR)/index.Po html/$(DEPDIR)/header.Po \
-	html/$(DEPDIR)/text.Po index/$(DEPDIR)/index.Po \
-	index/$(DEPDIR)/listing.Po ipc/$(DEPDIR)/focus.Po \
-	ipc/$(DEPDIR)/notes.Po jobs/$(DEPDIR)/index.Po \
-	journal/$(DEPDIR)/index.Po journal/$(DEPDIR)/logic.Po \
-	jsonxx/$(DEPDIR)/jsonxx.Po ldap/$(DEPDIR)/logic.Po \
-	lexicon/$(DEPDIR)/definition.Po lexicon/$(DEPDIR)/logic.Po \
-	library/$(DEPDIR)/bibledit.Po library/$(DEPDIR)/locks.Po \
-	locale/$(DEPDIR)/logic.Po locale/$(DEPDIR)/translate.Po \
-	manage/$(DEPDIR)/exports.Po manage/$(DEPDIR)/hyphenate.Po \
-	manage/$(DEPDIR)/hyphenation.Po manage/$(DEPDIR)/index.Po \
-	manage/$(DEPDIR)/privileges.Po manage/$(DEPDIR)/users.Po \
-	manage/$(DEPDIR)/write.Po mapping/$(DEPDIR)/index.Po \
-	mapping/$(DEPDIR)/map.Po mbedtls/$(DEPDIR)/aes.Po \
-	mbedtls/$(DEPDIR)/aesni.Po mbedtls/$(DEPDIR)/arc4.Po \
-	mbedtls/$(DEPDIR)/asn1parse.Po mbedtls/$(DEPDIR)/asn1write.Po \
-	mbedtls/$(DEPDIR)/base64.Po mbedtls/$(DEPDIR)/bignum.Po \
-	mbedtls/$(DEPDIR)/blowfish.Po mbedtls/$(DEPDIR)/camellia.Po \
-	mbedtls/$(DEPDIR)/ccm.Po mbedtls/$(DEPDIR)/certs.Po \
-	mbedtls/$(DEPDIR)/chacha20.Po mbedtls/$(DEPDIR)/chachapoly.Po \
-	mbedtls/$(DEPDIR)/cipher.Po mbedtls/$(DEPDIR)/cipher_wrap.Po \
-	mbedtls/$(DEPDIR)/ctr_drbg.Po mbedtls/$(DEPDIR)/debug.Po \
-	mbedtls/$(DEPDIR)/des.Po mbedtls/$(DEPDIR)/dhm.Po \
-	mbedtls/$(DEPDIR)/ecdh.Po mbedtls/$(DEPDIR)/ecdsa.Po \
-	mbedtls/$(DEPDIR)/ecjpake.Po mbedtls/$(DEPDIR)/ecp.Po \
-	mbedtls/$(DEPDIR)/ecp_curves.Po mbedtls/$(DEPDIR)/entropy.Po \
-	mbedtls/$(DEPDIR)/entropy_poll.Po mbedtls/$(DEPDIR)/error.Po \
-	mbedtls/$(DEPDIR)/gcm.Po mbedtls/$(DEPDIR)/havege.Po \
-	mbedtls/$(DEPDIR)/hmac_drbg.Po mbedtls/$(DEPDIR)/md.Po \
-	mbedtls/$(DEPDIR)/md2.Po mbedtls/$(DEPDIR)/md4.Po \
-	mbedtls/$(DEPDIR)/md5.Po mbedtls/$(DEPDIR)/md_wrap.Po \
+	filter/$(DEPDIR)/html.Po filter/$(DEPDIR)/mail.Po \
+	filter/$(DEPDIR)/md5.Po filter/$(DEPDIR)/memory.Po \
+	filter/$(DEPDIR)/merge.Po filter/$(DEPDIR)/passage.Po \
+	filter/$(DEPDIR)/roles.Po filter/$(DEPDIR)/shell.Po \
+	filter/$(DEPDIR)/string.Po filter/$(DEPDIR)/text.Po \
+	filter/$(DEPDIR)/url.Po filter/$(DEPDIR)/usfm.Po \
+	filter/$(DEPDIR)/webview.Po flate/$(DEPDIR)/flate.Po \
+	fonts/$(DEPDIR)/logic.Po help/$(DEPDIR)/index.Po \
+	html/$(DEPDIR)/header.Po html/$(DEPDIR)/text.Po \
+	index/$(DEPDIR)/index.Po index/$(DEPDIR)/listing.Po \
+	ipc/$(DEPDIR)/focus.Po ipc/$(DEPDIR)/notes.Po \
+	jobs/$(DEPDIR)/index.Po journal/$(DEPDIR)/index.Po \
+	journal/$(DEPDIR)/logic.Po jsonxx/$(DEPDIR)/jsonxx.Po \
+	ldap/$(DEPDIR)/logic.Po lexicon/$(DEPDIR)/definition.Po \
+	lexicon/$(DEPDIR)/logic.Po library/$(DEPDIR)/bibledit.Po \
+	library/$(DEPDIR)/locks.Po locale/$(DEPDIR)/logic.Po \
+	locale/$(DEPDIR)/translate.Po manage/$(DEPDIR)/exports.Po \
+	manage/$(DEPDIR)/hyphenate.Po manage/$(DEPDIR)/hyphenation.Po \
+	manage/$(DEPDIR)/index.Po manage/$(DEPDIR)/privileges.Po \
+	manage/$(DEPDIR)/users.Po manage/$(DEPDIR)/write.Po \
+	mapping/$(DEPDIR)/index.Po mapping/$(DEPDIR)/map.Po \
+	mbedtls/$(DEPDIR)/aes.Po mbedtls/$(DEPDIR)/aesni.Po \
+	mbedtls/$(DEPDIR)/arc4.Po mbedtls/$(DEPDIR)/asn1parse.Po \
+	mbedtls/$(DEPDIR)/asn1write.Po mbedtls/$(DEPDIR)/base64.Po \
+	mbedtls/$(DEPDIR)/bignum.Po mbedtls/$(DEPDIR)/blowfish.Po \
+	mbedtls/$(DEPDIR)/camellia.Po mbedtls/$(DEPDIR)/ccm.Po \
+	mbedtls/$(DEPDIR)/certs.Po mbedtls/$(DEPDIR)/chacha20.Po \
+	mbedtls/$(DEPDIR)/chachapoly.Po mbedtls/$(DEPDIR)/cipher.Po \
+	mbedtls/$(DEPDIR)/cipher_wrap.Po mbedtls/$(DEPDIR)/ctr_drbg.Po \
+	mbedtls/$(DEPDIR)/debug.Po mbedtls/$(DEPDIR)/des.Po \
+	mbedtls/$(DEPDIR)/dhm.Po mbedtls/$(DEPDIR)/ecdh.Po \
+	mbedtls/$(DEPDIR)/ecdsa.Po mbedtls/$(DEPDIR)/ecjpake.Po \
+	mbedtls/$(DEPDIR)/ecp.Po mbedtls/$(DEPDIR)/ecp_curves.Po \
+	mbedtls/$(DEPDIR)/entropy.Po mbedtls/$(DEPDIR)/entropy_poll.Po \
+	mbedtls/$(DEPDIR)/error.Po mbedtls/$(DEPDIR)/gcm.Po \
+	mbedtls/$(DEPDIR)/havege.Po mbedtls/$(DEPDIR)/hmac_drbg.Po \
+	mbedtls/$(DEPDIR)/md.Po mbedtls/$(DEPDIR)/md2.Po \
+	mbedtls/$(DEPDIR)/md4.Po mbedtls/$(DEPDIR)/md5.Po \
+	mbedtls/$(DEPDIR)/md_wrap.Po \
 	mbedtls/$(DEPDIR)/memory_buffer_alloc.Po \
 	mbedtls/$(DEPDIR)/net_sockets.Po mbedtls/$(DEPDIR)/oid.Po \
 	mbedtls/$(DEPDIR)/padlock.Po mbedtls/$(DEPDIR)/pem.Po \
@@ -923,6 +925,7 @@ libbibledit_a_SOURCES = \
 	filter/passage.cpp \
 	filter/css.cpp \
 	filter/git.cpp \
+	filter/html.cpp \
 	filter/diff.cpp \
 	filter/shell.cpp \
 	filter/merge.cpp \
@@ -1599,6 +1602,8 @@ filter/passage.$(OBJEXT): filter/$(am__dirstamp) \
 filter/css.$(OBJEXT): filter/$(am__dirstamp) \
 	filter/$(DEPDIR)/$(am__dirstamp)
 filter/git.$(OBJEXT): filter/$(am__dirstamp) \
+	filter/$(DEPDIR)/$(am__dirstamp)
+filter/html.$(OBJEXT): filter/$(am__dirstamp) \
 	filter/$(DEPDIR)/$(am__dirstamp)
 filter/diff.$(OBJEXT): filter/$(am__dirstamp) \
 	filter/$(DEPDIR)/$(am__dirstamp)
@@ -3331,6 +3336,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/date.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/diff.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/git.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/html.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/mail.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/md5.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/memory.Po@am__quote@ # am--include-marker
@@ -4371,6 +4377,7 @@ distclean: distclean-am
 	-rm -f filter/$(DEPDIR)/date.Po
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
+	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
 	-rm -f filter/$(DEPDIR)/memory.Po
@@ -4934,6 +4941,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f filter/$(DEPDIR)/date.Po
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
+	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
 	-rm -f filter/$(DEPDIR)/memory.Po
