Export Bibles for neural machine translation training

--- a/Makefile.am
+++ b/Makefile.am
@@ -434,7 +434,8 @@ libbibledit_a_SOURCES = \
 	rss/feed.cpp \
 	microtar/microtar.c \
 	miniz/miniz.c \
-	nmt/index.cpp
+	nmt/index.cpp \
+	nmt/logic.cpp
 
 bin_PROGRAMS = server unittest generate
 
