--- a/Makefile.in
+++ b/Makefile.in
@@ -331,7 +331,7 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	related/logic.$(OBJEXT) sqlite/sqlite3.$(OBJEXT) \
 	ldap/logic.$(OBJEXT) quill/logic.$(OBJEXT) rss/logic.$(OBJEXT) \
 	rss/feed.$(OBJEXT) microtar/microtar.$(OBJEXT) \
-	miniz/miniz.$(OBJEXT) nmt/index.$(OBJEXT)
+	miniz/miniz.$(OBJEXT) nmt/index.$(OBJEXT) nmt/logic.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -554,20 +554,20 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	microtar/$(DEPDIR)/microtar.Po miniz/$(DEPDIR)/miniz.Po \
 	navigation/$(DEPDIR)/passage.Po navigation/$(DEPDIR)/poll.Po \
 	navigation/$(DEPDIR)/update.Po nmt/$(DEPDIR)/index.Po \
-	notes/$(DEPDIR)/actions.Po notes/$(DEPDIR)/assign-1.Po \
-	notes/$(DEPDIR)/assign-n.Po notes/$(DEPDIR)/bb-1.Po \
-	notes/$(DEPDIR)/bb-n.Po notes/$(DEPDIR)/bulk.Po \
-	notes/$(DEPDIR)/click.Po notes/$(DEPDIR)/comment.Po \
-	notes/$(DEPDIR)/create.Po notes/$(DEPDIR)/edit.Po \
-	notes/$(DEPDIR)/index.Po notes/$(DEPDIR)/logic.Po \
-	notes/$(DEPDIR)/note.Po notes/$(DEPDIR)/notes.Po \
-	notes/$(DEPDIR)/poll.Po notes/$(DEPDIR)/select.Po \
-	notes/$(DEPDIR)/severity-1.Po notes/$(DEPDIR)/severity-n.Po \
-	notes/$(DEPDIR)/status-1.Po notes/$(DEPDIR)/status-n.Po \
-	notes/$(DEPDIR)/summary.Po notes/$(DEPDIR)/unassign-n.Po \
-	notes/$(DEPDIR)/verses.Po odf/$(DEPDIR)/text.Po \
-	olb/$(DEPDIR)/text.Po paratext/$(DEPDIR)/index.Po \
-	paratext/$(DEPDIR)/logic.Po \
+	nmt/$(DEPDIR)/logic.Po notes/$(DEPDIR)/actions.Po \
+	notes/$(DEPDIR)/assign-1.Po notes/$(DEPDIR)/assign-n.Po \
+	notes/$(DEPDIR)/bb-1.Po notes/$(DEPDIR)/bb-n.Po \
+	notes/$(DEPDIR)/bulk.Po notes/$(DEPDIR)/click.Po \
+	notes/$(DEPDIR)/comment.Po notes/$(DEPDIR)/create.Po \
+	notes/$(DEPDIR)/edit.Po notes/$(DEPDIR)/index.Po \
+	notes/$(DEPDIR)/logic.Po notes/$(DEPDIR)/note.Po \
+	notes/$(DEPDIR)/notes.Po notes/$(DEPDIR)/poll.Po \
+	notes/$(DEPDIR)/select.Po notes/$(DEPDIR)/severity-1.Po \
+	notes/$(DEPDIR)/severity-n.Po notes/$(DEPDIR)/status-1.Po \
+	notes/$(DEPDIR)/status-n.Po notes/$(DEPDIR)/summary.Po \
+	notes/$(DEPDIR)/unassign-n.Po notes/$(DEPDIR)/verses.Po \
+	odf/$(DEPDIR)/text.Po olb/$(DEPDIR)/text.Po \
+	paratext/$(DEPDIR)/index.Po paratext/$(DEPDIR)/logic.Po \
 	parsewebdata/$(DEPDIR)/ParseMultipartFormData.Po \
 	parsewebdata/$(DEPDIR)/ParseWebData.Po \
 	personalize/$(DEPDIR)/index.Po public/$(DEPDIR)/chapter.Po \
@@ -1342,7 +1342,8 @@ libbibledit_a_SOURCES = \
 	rss/feed.cpp \
 	microtar/microtar.c \
 	miniz/miniz.c \
-	nmt/index.cpp
+	nmt/index.cpp \
+	nmt/logic.cpp
 
 server_SOURCES = executable/bibledit.cpp
 server_LDADD = libbibledit.a
@@ -2903,6 +2904,7 @@ nmt/$(DEPDIR)/$(am__dirstamp):
 	@$(MKDIR_P) nmt/$(DEPDIR)
 	@: > nmt/$(DEPDIR)/$(am__dirstamp)
 nmt/index.$(OBJEXT): nmt/$(am__dirstamp) nmt/$(DEPDIR)/$(am__dirstamp)
+nmt/logic.$(OBJEXT): nmt/$(am__dirstamp) nmt/$(DEPDIR)/$(am__dirstamp)
 
 libbibledit.a: $(libbibledit_a_OBJECTS) $(libbibledit_a_DEPENDENCIES) $(EXTRA_libbibledit_a_DEPENDENCIES) 
 	$(AM_V_at)-rm -f libbibledit.a
@@ -3471,6 +3473,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@navigation/$(DEPDIR)/poll.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@navigation/$(DEPDIR)/update.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@nmt/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@nmt/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@notes/$(DEPDIR)/actions.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@notes/$(DEPDIR)/assign-1.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@notes/$(DEPDIR)/assign-n.Po@am__quote@ # am--include-marker
@@ -4515,6 +4518,7 @@ distclean: distclean-am
 	-rm -f navigation/$(DEPDIR)/poll.Po
 	-rm -f navigation/$(DEPDIR)/update.Po
 	-rm -f nmt/$(DEPDIR)/index.Po
+	-rm -f nmt/$(DEPDIR)/logic.Po
 	-rm -f notes/$(DEPDIR)/actions.Po
 	-rm -f notes/$(DEPDIR)/assign-1.Po
 	-rm -f notes/$(DEPDIR)/assign-n.Po
@@ -5080,6 +5084,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f navigation/$(DEPDIR)/poll.Po
 	-rm -f navigation/$(DEPDIR)/update.Po
 	-rm -f nmt/$(DEPDIR)/index.Po
+	-rm -f nmt/$(DEPDIR)/logic.Po
 	-rm -f notes/$(DEPDIR)/actions.Po
 	-rm -f notes/$(DEPDIR)/assign-1.Po
 	-rm -f notes/$(DEPDIR)/assign-n.Po
