--- a/Makefile.in
+++ b/Makefile.in
@@ -217,18 +217,23 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
 	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
 	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
-	edit/navigate.$(OBJEXT) search/all.$(OBJEXT) \
-	search/index.$(OBJEXT) search/replace.$(OBJEXT) \
-	search/getids.$(OBJEXT) search/replacepre.$(OBJEXT) \
-	search/replacego.$(OBJEXT) search/search2.$(OBJEXT) \
-	search/replace2.$(OBJEXT) search/replacepre2.$(OBJEXT) \
-	search/getids2.$(OBJEXT) search/replacego2.$(OBJEXT) \
-	search/similar.$(OBJEXT) search/strongs.$(OBJEXT) \
-	search/strong.$(OBJEXT) search/originals.$(OBJEXT) \
-	tmp/tmp.$(OBJEXT) workspace/index.$(OBJEXT) \
-	workspace/logic.$(OBJEXT) workspace/settings.$(OBJEXT) \
-	workspace/organize.$(OBJEXT) sendreceive/logic.$(OBJEXT) \
-	sendreceive/index.$(OBJEXT) sendreceive/sendreceive.$(OBJEXT) \
+	edit/navigate.$(OBJEXT) edit2/edit.$(OBJEXT) \
+	edit2/id.$(OBJEXT) edit2/index.$(OBJEXT) edit2/load.$(OBJEXT) \
+	edit2/save.$(OBJEXT) edit2/styles.$(OBJEXT) \
+	edit2/logic.$(OBJEXT) edit2/preview.$(OBJEXT) \
+	edit2/position.$(OBJEXT) edit2/navigate.$(OBJEXT) \
+	search/all.$(OBJEXT) search/index.$(OBJEXT) \
+	search/replace.$(OBJEXT) search/getids.$(OBJEXT) \
+	search/replacepre.$(OBJEXT) search/replacego.$(OBJEXT) \
+	search/search2.$(OBJEXT) search/replace2.$(OBJEXT) \
+	search/replacepre2.$(OBJEXT) search/getids2.$(OBJEXT) \
+	search/replacego2.$(OBJEXT) search/similar.$(OBJEXT) \
+	search/strongs.$(OBJEXT) search/strong.$(OBJEXT) \
+	search/originals.$(OBJEXT) tmp/tmp.$(OBJEXT) \
+	workspace/index.$(OBJEXT) workspace/logic.$(OBJEXT) \
+	workspace/settings.$(OBJEXT) workspace/organize.$(OBJEXT) \
+	sendreceive/logic.$(OBJEXT) sendreceive/index.$(OBJEXT) \
+	sendreceive/sendreceive.$(OBJEXT) \
 	sendreceive/settings.$(OBJEXT) sendreceive/bibles.$(OBJEXT) \
 	sendreceive/notes.$(OBJEXT) sendreceive/changes.$(OBJEXT) \
 	sendreceive/files.$(OBJEXT) sendreceive/resources.$(OBJEXT) \
@@ -469,6 +474,11 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	edit/$(DEPDIR)/logic.Po edit/$(DEPDIR)/navigate.Po \
 	edit/$(DEPDIR)/position.Po edit/$(DEPDIR)/preview.Po \
 	edit/$(DEPDIR)/save.Po edit/$(DEPDIR)/styles.Po \
+	edit2/$(DEPDIR)/edit.Po edit2/$(DEPDIR)/id.Po \
+	edit2/$(DEPDIR)/index.Po edit2/$(DEPDIR)/load.Po \
+	edit2/$(DEPDIR)/logic.Po edit2/$(DEPDIR)/navigate.Po \
+	edit2/$(DEPDIR)/position.Po edit2/$(DEPDIR)/preview.Po \
+	edit2/$(DEPDIR)/save.Po edit2/$(DEPDIR)/styles.Po \
 	editone/$(DEPDIR)/index.Po editone/$(DEPDIR)/load.Po \
 	editone/$(DEPDIR)/logic.Po editone/$(DEPDIR)/save.Po \
 	editone/$(DEPDIR)/verse.Po editor/$(DEPDIR)/html2usfm.Po \
@@ -1120,6 +1130,16 @@ libbibledit_a_SOURCES = \
 	edit/preview.cpp \
 	edit/position.cpp \
 	edit/navigate.cpp \
+  edit2/edit.cpp \
+  edit2/id.cpp \
+  edit2/index.cpp \
+  edit2/load.cpp \
+  edit2/save.cpp \
+  edit2/styles.cpp \
+  edit2/logic.cpp \
+  edit2/preview.cpp \
+  edit2/position.cpp \
+  edit2/navigate.cpp \
 	search/all.cpp \
 	search/index.cpp \
 	search/replace.cpp \
@@ -2252,6 +2272,32 @@ edit/position.$(OBJEXT): edit/$(am__dirstamp) \
 	edit/$(DEPDIR)/$(am__dirstamp)
 edit/navigate.$(OBJEXT): edit/$(am__dirstamp) \
 	edit/$(DEPDIR)/$(am__dirstamp)
+edit2/$(am__dirstamp):
+	@$(MKDIR_P) edit2
+	@: > edit2/$(am__dirstamp)
+edit2/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) edit2/$(DEPDIR)
+	@: > edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/edit.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/id.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/index.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/load.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/save.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/styles.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/logic.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/preview.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/position.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
+edit2/navigate.$(OBJEXT): edit2/$(am__dirstamp) \
+	edit2/$(DEPDIR)/$(am__dirstamp)
 search/all.$(OBJEXT): search/$(am__dirstamp) \
 	search/$(DEPDIR)/$(am__dirstamp)
 search/index.$(OBJEXT): search/$(am__dirstamp) \
@@ -3117,6 +3163,7 @@ mostlyclean-compile:
 	-rm -f developer/*.$(OBJEXT)
 	-rm -f dialog/*.$(OBJEXT)
 	-rm -f edit/*.$(OBJEXT)
+	-rm -f edit2/*.$(OBJEXT)
 	-rm -f editone/*.$(OBJEXT)
 	-rm -f editor/*.$(OBJEXT)
 	-rm -f editusfm/*.$(OBJEXT)
@@ -3304,6 +3351,16 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@edit/$(DEPDIR)/preview.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@edit/$(DEPDIR)/save.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@edit/$(DEPDIR)/styles.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/edit.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/id.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/load.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/navigate.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/position.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/preview.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/save.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@edit2/$(DEPDIR)/styles.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/load.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
@@ -4094,6 +4151,8 @@ distclean-generic:
 	-rm -f dialog/$(am__dirstamp)
 	-rm -f edit/$(DEPDIR)/$(am__dirstamp)
 	-rm -f edit/$(am__dirstamp)
+	-rm -f edit2/$(DEPDIR)/$(am__dirstamp)
+	-rm -f edit2/$(am__dirstamp)
 	-rm -f editone/$(DEPDIR)/$(am__dirstamp)
 	-rm -f editone/$(am__dirstamp)
 	-rm -f editor/$(DEPDIR)/$(am__dirstamp)
@@ -4353,6 +4412,16 @@ distclean: distclean-am
 	-rm -f edit/$(DEPDIR)/preview.Po
 	-rm -f edit/$(DEPDIR)/save.Po
 	-rm -f edit/$(DEPDIR)/styles.Po
+	-rm -f edit2/$(DEPDIR)/edit.Po
+	-rm -f edit2/$(DEPDIR)/id.Po
+	-rm -f edit2/$(DEPDIR)/index.Po
+	-rm -f edit2/$(DEPDIR)/load.Po
+	-rm -f edit2/$(DEPDIR)/logic.Po
+	-rm -f edit2/$(DEPDIR)/navigate.Po
+	-rm -f edit2/$(DEPDIR)/position.Po
+	-rm -f edit2/$(DEPDIR)/preview.Po
+	-rm -f edit2/$(DEPDIR)/save.Po
+	-rm -f edit2/$(DEPDIR)/styles.Po
 	-rm -f editone/$(DEPDIR)/index.Po
 	-rm -f editone/$(DEPDIR)/load.Po
 	-rm -f editone/$(DEPDIR)/logic.Po
@@ -4919,6 +4988,16 @@ maintainer-clean: maintainer-clean-am
 	-rm -f edit/$(DEPDIR)/preview.Po
 	-rm -f edit/$(DEPDIR)/save.Po
 	-rm -f edit/$(DEPDIR)/styles.Po
+	-rm -f edit2/$(DEPDIR)/edit.Po
+	-rm -f edit2/$(DEPDIR)/id.Po
+	-rm -f edit2/$(DEPDIR)/index.Po
+	-rm -f edit2/$(DEPDIR)/load.Po
+	-rm -f edit2/$(DEPDIR)/logic.Po
+	-rm -f edit2/$(DEPDIR)/navigate.Po
+	-rm -f edit2/$(DEPDIR)/position.Po
+	-rm -f edit2/$(DEPDIR)/preview.Po
+	-rm -f edit2/$(DEPDIR)/save.Po
+	-rm -f edit2/$(DEPDIR)/styles.Po
 	-rm -f editone/$(DEPDIR)/index.Po
 	-rm -f editone/$(DEPDIR)/load.Po
 	-rm -f editone/$(DEPDIR)/logic.Po
