Copy verse editor to V2
https://github.com/bibledit2/cloud/issues/426

--- a/Makefile.in
+++ b/Makefile.in
@@ -206,34 +206,36 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	jobs/index.$(OBJEXT) editone/index.$(OBJEXT) \
 	editone/load.$(OBJEXT) editone/save.$(OBJEXT) \
 	editone/verse.$(OBJEXT) editone/logic.$(OBJEXT) \
-	navigation/passage.$(OBJEXT) navigation/update.$(OBJEXT) \
-	navigation/poll.$(OBJEXT) ipc/focus.$(OBJEXT) \
-	ipc/notes.$(OBJEXT) checksum/logic.$(OBJEXT) \
-	editusfm/focus.$(OBJEXT) editusfm/index.$(OBJEXT) \
-	editusfm/load.$(OBJEXT) editusfm/offset.$(OBJEXT) \
-	editusfm/save.$(OBJEXT) editor/styles.$(OBJEXT) \
-	editor/html2usfm.$(OBJEXT) editor/usfm2html.$(OBJEXT) \
-	editor/select.$(OBJEXT) edit/edit.$(OBJEXT) edit/id.$(OBJEXT) \
-	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
-	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
-	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
-	edit/navigate.$(OBJEXT) edit2/edit.$(OBJEXT) \
-	edit2/id.$(OBJEXT) edit2/index.$(OBJEXT) edit2/load.$(OBJEXT) \
-	edit2/save.$(OBJEXT) edit2/styles.$(OBJEXT) \
-	edit2/logic.$(OBJEXT) edit2/preview.$(OBJEXT) \
-	edit2/position.$(OBJEXT) edit2/navigate.$(OBJEXT) \
-	search/all.$(OBJEXT) search/index.$(OBJEXT) \
-	search/replace.$(OBJEXT) search/getids.$(OBJEXT) \
-	search/replacepre.$(OBJEXT) search/replacego.$(OBJEXT) \
-	search/search2.$(OBJEXT) search/replace2.$(OBJEXT) \
-	search/replacepre2.$(OBJEXT) search/getids2.$(OBJEXT) \
-	search/replacego2.$(OBJEXT) search/similar.$(OBJEXT) \
-	search/strongs.$(OBJEXT) search/strong.$(OBJEXT) \
-	search/originals.$(OBJEXT) tmp/tmp.$(OBJEXT) \
-	workspace/index.$(OBJEXT) workspace/logic.$(OBJEXT) \
-	workspace/settings.$(OBJEXT) workspace/organize.$(OBJEXT) \
-	sendreceive/logic.$(OBJEXT) sendreceive/index.$(OBJEXT) \
-	sendreceive/sendreceive.$(OBJEXT) \
+	editone2/index.$(OBJEXT) editone2/load.$(OBJEXT) \
+	editone2/save.$(OBJEXT) editone2/verse.$(OBJEXT) \
+	editone2/logic.$(OBJEXT) navigation/passage.$(OBJEXT) \
+	navigation/update.$(OBJEXT) navigation/poll.$(OBJEXT) \
+	ipc/focus.$(OBJEXT) ipc/notes.$(OBJEXT) \
+	checksum/logic.$(OBJEXT) editusfm/focus.$(OBJEXT) \
+	editusfm/index.$(OBJEXT) editusfm/load.$(OBJEXT) \
+	editusfm/offset.$(OBJEXT) editusfm/save.$(OBJEXT) \
+	editor/styles.$(OBJEXT) editor/html2usfm.$(OBJEXT) \
+	editor/usfm2html.$(OBJEXT) editor/select.$(OBJEXT) \
+	edit/edit.$(OBJEXT) edit/id.$(OBJEXT) edit/index.$(OBJEXT) \
+	edit/load.$(OBJEXT) edit/save.$(OBJEXT) edit/styles.$(OBJEXT) \
+	edit/logic.$(OBJEXT) edit/preview.$(OBJEXT) \
+	edit/position.$(OBJEXT) edit/navigate.$(OBJEXT) \
+	edit2/edit.$(OBJEXT) edit2/id.$(OBJEXT) edit2/index.$(OBJEXT) \
+	edit2/load.$(OBJEXT) edit2/save.$(OBJEXT) \
+	edit2/styles.$(OBJEXT) edit2/logic.$(OBJEXT) \
+	edit2/preview.$(OBJEXT) edit2/position.$(OBJEXT) \
+	edit2/navigate.$(OBJEXT) search/all.$(OBJEXT) \
+	search/index.$(OBJEXT) search/replace.$(OBJEXT) \
+	search/getids.$(OBJEXT) search/replacepre.$(OBJEXT) \
+	search/replacego.$(OBJEXT) search/search2.$(OBJEXT) \
+	search/replace2.$(OBJEXT) search/replacepre2.$(OBJEXT) \
+	search/getids2.$(OBJEXT) search/replacego2.$(OBJEXT) \
+	search/similar.$(OBJEXT) search/strongs.$(OBJEXT) \
+	search/strong.$(OBJEXT) search/originals.$(OBJEXT) \
+	tmp/tmp.$(OBJEXT) workspace/index.$(OBJEXT) \
+	workspace/logic.$(OBJEXT) workspace/settings.$(OBJEXT) \
+	workspace/organize.$(OBJEXT) sendreceive/logic.$(OBJEXT) \
+	sendreceive/index.$(OBJEXT) sendreceive/sendreceive.$(OBJEXT) \
 	sendreceive/settings.$(OBJEXT) sendreceive/bibles.$(OBJEXT) \
 	sendreceive/notes.$(OBJEXT) sendreceive/changes.$(OBJEXT) \
 	sendreceive/files.$(OBJEXT) sendreceive/resources.$(OBJEXT) \
@@ -481,14 +483,16 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	edit2/$(DEPDIR)/save.Po edit2/$(DEPDIR)/styles.Po \
 	editone/$(DEPDIR)/index.Po editone/$(DEPDIR)/load.Po \
 	editone/$(DEPDIR)/logic.Po editone/$(DEPDIR)/save.Po \
-	editone/$(DEPDIR)/verse.Po editor/$(DEPDIR)/html2usfm.Po \
-	editor/$(DEPDIR)/select.Po editor/$(DEPDIR)/styles.Po \
-	editor/$(DEPDIR)/usfm2html.Po editusfm/$(DEPDIR)/focus.Po \
-	editusfm/$(DEPDIR)/index.Po editusfm/$(DEPDIR)/load.Po \
-	editusfm/$(DEPDIR)/offset.Po editusfm/$(DEPDIR)/save.Po \
-	email/$(DEPDIR)/index.Po email/$(DEPDIR)/receive.Po \
-	email/$(DEPDIR)/send.Po esword/$(DEPDIR)/text.Po \
-	executable/$(DEPDIR)/bibledit.Po \
+	editone/$(DEPDIR)/verse.Po editone2/$(DEPDIR)/index.Po \
+	editone2/$(DEPDIR)/load.Po editone2/$(DEPDIR)/logic.Po \
+	editone2/$(DEPDIR)/save.Po editone2/$(DEPDIR)/verse.Po \
+	editor/$(DEPDIR)/html2usfm.Po editor/$(DEPDIR)/select.Po \
+	editor/$(DEPDIR)/styles.Po editor/$(DEPDIR)/usfm2html.Po \
+	editusfm/$(DEPDIR)/focus.Po editusfm/$(DEPDIR)/index.Po \
+	editusfm/$(DEPDIR)/load.Po editusfm/$(DEPDIR)/offset.Po \
+	editusfm/$(DEPDIR)/save.Po email/$(DEPDIR)/index.Po \
+	email/$(DEPDIR)/receive.Po email/$(DEPDIR)/send.Po \
+	esword/$(DEPDIR)/text.Po executable/$(DEPDIR)/bibledit.Po \
 	executable/$(DEPDIR)/generate.Po \
 	export/$(DEPDIR)/bibledropbox.Po export/$(DEPDIR)/esword.Po \
 	export/$(DEPDIR)/html.Po export/$(DEPDIR)/index.Po \
@@ -1105,6 +1109,11 @@ libbibledit_a_SOURCES = \
 	editone/save.cpp \
 	editone/verse.cpp \
 	editone/logic.cpp \
+  editone2/index.cpp \
+  editone2/load.cpp \
+  editone2/save.cpp \
+  editone2/verse.cpp \
+  editone2/logic.cpp \
 	navigation/passage.cpp \
 	navigation/update.cpp \
 	navigation/poll.cpp \
@@ -2189,6 +2198,22 @@ editone/verse.$(OBJEXT): editone/$(am__dirstamp) \
 	editone/$(DEPDIR)/$(am__dirstamp)
 editone/logic.$(OBJEXT): editone/$(am__dirstamp) \
 	editone/$(DEPDIR)/$(am__dirstamp)
+editone2/$(am__dirstamp):
+	@$(MKDIR_P) editone2
+	@: > editone2/$(am__dirstamp)
+editone2/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) editone2/$(DEPDIR)
+	@: > editone2/$(DEPDIR)/$(am__dirstamp)
+editone2/index.$(OBJEXT): editone2/$(am__dirstamp) \
+	editone2/$(DEPDIR)/$(am__dirstamp)
+editone2/load.$(OBJEXT): editone2/$(am__dirstamp) \
+	editone2/$(DEPDIR)/$(am__dirstamp)
+editone2/save.$(OBJEXT): editone2/$(am__dirstamp) \
+	editone2/$(DEPDIR)/$(am__dirstamp)
+editone2/verse.$(OBJEXT): editone2/$(am__dirstamp) \
+	editone2/$(DEPDIR)/$(am__dirstamp)
+editone2/logic.$(OBJEXT): editone2/$(am__dirstamp) \
+	editone2/$(DEPDIR)/$(am__dirstamp)
 navigation/$(am__dirstamp):
 	@$(MKDIR_P) navigation
 	@: > navigation/$(am__dirstamp)
@@ -3165,6 +3190,7 @@ mostlyclean-compile:
 	-rm -f edit/*.$(OBJEXT)
 	-rm -f edit2/*.$(OBJEXT)
 	-rm -f editone/*.$(OBJEXT)
+	-rm -f editone2/*.$(OBJEXT)
 	-rm -f editor/*.$(OBJEXT)
 	-rm -f editusfm/*.$(OBJEXT)
 	-rm -f email/*.$(OBJEXT)
@@ -3366,6 +3392,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/save.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editone/$(DEPDIR)/verse.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/index.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/load.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/save.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@editone2/$(DEPDIR)/verse.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/html2usfm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/select.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@editor/$(DEPDIR)/styles.Po@am__quote@ # am--include-marker
@@ -4155,6 +4186,8 @@ distclean-generic:
 	-rm -f edit2/$(am__dirstamp)
 	-rm -f editone/$(DEPDIR)/$(am__dirstamp)
 	-rm -f editone/$(am__dirstamp)
+	-rm -f editone2/$(DEPDIR)/$(am__dirstamp)
+	-rm -f editone2/$(am__dirstamp)
 	-rm -f editor/$(DEPDIR)/$(am__dirstamp)
 	-rm -f editor/$(am__dirstamp)
 	-rm -f editusfm/$(DEPDIR)/$(am__dirstamp)
@@ -4427,6 +4460,11 @@ distclean: distclean-am
 	-rm -f editone/$(DEPDIR)/logic.Po
 	-rm -f editone/$(DEPDIR)/save.Po
 	-rm -f editone/$(DEPDIR)/verse.Po
+	-rm -f editone2/$(DEPDIR)/index.Po
+	-rm -f editone2/$(DEPDIR)/load.Po
+	-rm -f editone2/$(DEPDIR)/logic.Po
+	-rm -f editone2/$(DEPDIR)/save.Po
+	-rm -f editone2/$(DEPDIR)/verse.Po
 	-rm -f editor/$(DEPDIR)/html2usfm.Po
 	-rm -f editor/$(DEPDIR)/select.Po
 	-rm -f editor/$(DEPDIR)/styles.Po
@@ -5003,6 +5041,11 @@ maintainer-clean: maintainer-clean-am
 	-rm -f editone/$(DEPDIR)/logic.Po
 	-rm -f editone/$(DEPDIR)/save.Po
 	-rm -f editone/$(DEPDIR)/verse.Po
+	-rm -f editone2/$(DEPDIR)/index.Po
+	-rm -f editone2/$(DEPDIR)/load.Po
+	-rm -f editone2/$(DEPDIR)/logic.Po
+	-rm -f editone2/$(DEPDIR)/save.Po
+	-rm -f editone2/$(DEPDIR)/verse.Po
 	-rm -f editor/$(DEPDIR)/html2usfm.Po
 	-rm -f editor/$(DEPDIR)/select.Po
 	-rm -f editor/$(DEPDIR)/styles.Po
